[nvptx] Fix propagation of branch cond in vw-neutered code

2018-04-12  Tom de Vries  <tom@codesourcery.com>

	PR target/85246
	* config/nvptx/nvptx.c (nvptx_single): Don't use partitioning when
	propagating branch condition calculated in vector-worker-neutered code.

	* testsuite/libgomp.oacc-fortran/gemm.f90: Use
	-foffload=-mlong-vector-in-workers.